# Calendarllm

./: .gitignore  README.md  crewai_runner.spec  generate_icon.py  package-lock.json  package.json
backend/: build_python.sh
backend/database/: db.js
backend/llm-feature/crew-ai-agent-iteration/calendar_interaction/: README.md  pyproject.toml
backend/llm-feature/crew-ai-agent-iteration/calendar_interaction/src/: insert_test.py
backend/llm-feature/crew-ai-agent-iteration/calendar_interaction/src/calendar_interaction/: __init__.py  crew.py  crewai_runner.py  main.py
backend/llm-feature/crew-ai-agent-iteration/calendar_interaction/src/calendar_interaction/config/: agents.yaml
backend/llm-feature/crew-ai-agent-iteration/calendar_interaction/src/calendar_interaction/tools/: __init__.py  sqlite_tool.py
dev_data/: DIPS  DIPS-wal  Preferences  calendar_llm.db  calendar_llm.db-shm  calendar_llm.db-wal
dev_data/DawnGraphiteCache/: data_1  index
dev_data/DawnWebGPUCache/: data_1  index
dev_data/GPUCache/: data_0  data_1  data_2  index
dev_data/Session Storage/: LOG  LOG.old
dist_renderer/: index.html
dist_renderer/assets/: index-BXvqgKzr.js  index-ZW_1r02o.css
electron/: main.js  preload.js
electron/dev_data/: DIPS  DIPS-wal  Preferences  calendar_llm.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: ApiKeyModel.css  ApiKeyModel.jsx  App.css  App.jsx  Calendar.jsx  CalendarStyles.js  EventDetailsModal.jsx  EventModal.jsx  LlmChatBox.jsx  MenuBar.css  (+4 more)
website/: index.html  package-lock.json  package.json
(+273 files in other folders)
